Fix repeating search icon on mobile

--- a/wp-content/themes/mspflymag/assets/scss/components/_forms.scss
+++ b/wp-content/themes/mspflymag/assets/scss/components/_forms.scss
@@ -15,6 +15,7 @@
 			margin-top: 4px;
 			margin-left: 5px;
       background-image: url("../images/icons/search.svg");
+      background-repeat: no-repeat;
       background-size: 19px 18px;
       display: inline-block;
 		}
